corrige erros